--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,6 +3,6 @@
     "module": "ES6",
     "jsx": "preserve",
     "checkJs": true
-  },
-  "exclude": ["node_modules", "**/node_modules/*"]
+  }
+  // "exclude": ["node_modules", "**/node_modules/*"]
 }
