--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,7 @@
-{
-  "compilerOptions": {
-    "module": "ES6",
-    "jsx": "preserve",
-    "checkJs": true
-  }
-}
+// {
+//   "compilerOptions": {
+//     "module": "ES6",
+//     "jsx": "preserve",
+//     "checkJs": true
+//   }
+// }
